解决了冲突

--- a/childpages/activity.html
+++ b/childpages/activity.html
@@ -4,6 +4,7 @@
 	<title>角色创建</title>
 </head>
 <body>
+    <li onclick="window.location.href='../index.html'">返回主界面</li>
 	<h1>欢迎来到角色创建系统</h1>
 	<form>
 		<label for="gender">性别：</label>
