--- a/index.html
+++ b/index.html
@@ -2,20 +2,73 @@
 <html>
 <head>
 	<title>硕博模拟器玩法介绍</title>
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			background-color: #f5f5f5;
+		}	
+		header {
+		background-color: #0a71b0;
+		color: #fff;
+		padding: 10px;
+		text-align: center;
+		}
+
+		h1 {
+		margin: 0;
+		font-size: 2.5em;
+		line-height: 1.2;
+		padding: 10px;
+		}
+
+		p {
+		font-size: 1.2em;
+		line-height: 1.5;
+		margin: 20px 0;
+		padding: 0 10px;
+		}
+
+		ul {
+		list-style-type: none;
+		padding: 0;
+		margin: 20px 0;
+		}
+
+		li {
+		margin: 10px;
+		padding: 10px;
+		background-color: #fff;
+		border: 1px solid #ccc;
+		border-radius: 5px;
+		}
+
+		a {
+		color: #0a71b0;
+		text-decoration: none;
+		}
+
+		a:hover {
+		text-decoration: underline;
+		}
+
+</style>
+
 </head>
 <body>
 	<h1>欢迎来到硕博模拟器</h1>
 	<p>在这个游戏中，你将扮演一位正在攻读硕士或博士学位的学生，通过完成各种任务、实验和论文，提高你的学术水平并取得学位。</p>
 	<p>你可以使用以下链接导航到各个页面：</p>
 	<ul>
-		<li><a href="./childpages/activity.html">角色创建</a></li>
-		<li><a href="./childpages/stats.html">数值页面</a></li>
-		<li><a href="./childpages/activity.html">活动选择</a></li>
-		<li><a href="./childpages/advisor.html">导师任务</a></li>
-		<li><a href="./childpages/experiment.html">实验页面</a></li>
-		<li><a href="./childpages/event.html">随机事件</a></li>
-		<li><a href="./childpages/thesis.html">论文页面</a></li>
-		<li><a href="./childpages/index.html">主界面</a></li>
+		<li onclick="window.location.href='./childpages/activity.html'">角色创建</li>
+			<li onclick="window.location.href='./childpages/stats.html'">数值页面</li>
+			<li onclick="window.location.href='./childpages/activity.html'">活动选择</li>
+			<li onclick="window.location.href='./childpages/advisor.html'">导师任务</li>
+			<li onclick="window.location.href='./childpages/experiment.html'">实验页面</li>
+			<li onclick="window.location.href='./childpages/event.html'">随机事件</li>
+			<li onclick="window.location.href='./childpages/thesis.html'">论文页面</li>
+			<li onclick="window.location.href='./childpages/index.html'">主界面</li>
 	</ul>
 </body>
 </html>
