--- a/childpages/advisor.html
+++ b/childpages/advisor.html
@@ -4,7 +4,9 @@
 	<title>导师任务</title>
 </head>
 <body>
-	<h1>欢迎来到导师任务系统</h1>
+    <li onclick="window.location.href='../index.html'">返回主界面</li>
+
+    <h1>文案待写</h1>
 	<h2>您当前的导师好感度为：<span id="favorability">80</span></h2>
 	<ul id="task-list">
 		<li><button onclick="simulateTaskCompletion('task-1')">任务1：编写一篇论文</button></li>
