--- a/childpages/event.html
+++ b/childpages/event.html
@@ -6,7 +6,9 @@
 <body>
 	<h1>随机事件界面</h1>
 	<p>导师突然找你谈话，让你去参加一场重要的学术会议！</p>
-	<button onclick="handleEvent(true)">接受</button>
+    <li onclick="window.location.href='../index.html'">返回主界面</li>
+
+    <button onclick="handleEvent(true)">接受</button>
 	<button onclick="handleEvent(false)">拒绝</button>
 	
 	<script>
