--- a/childpages/experiment.html
+++ b/childpages/experiment.html
@@ -4,7 +4,9 @@
 	<title>实验游戏界面</title>
 </head>
 <body>
-	<h1>实验游戏界面</h1>
+    <li onclick="window.location.href='../index.html'">返回主界面</li>
+
+    <h1>实验游戏界面</h1>
 	<p>请完成以下实验题目：</p>
 	<canvas id="game-canvas" width="800" height="600"></canvas>
 	<p>完成度：<span id="completion-value">0%</span></p>
