--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 </head>
 <body>
 	<h1>欢迎来到硕博模拟器</h1>
-	<p>在这个游戏中，你将扮演一位正在攻读硕士或博士学位的学生，通过完成各种任务、实验和论文，提高你的学术水平并取得学位。</p>
-	<p>你可以使用以下链接导航到各个页面：</p>
+	<p>点击下方按钮开学</p>
+	<p></p>
 	<ul>
 		<li onclick="window.location.href='./childpages/activity.html'">角色创建</li>
 			<li onclick="window.location.href='./childpages/stats.html'">数值页面</li>
@@ -68,7 +68,6 @@
 			<li onclick="window.location.href='./childpages/experiment.html'">实验页面</li>
 			<li onclick="window.location.href='./childpages/event.html'">随机事件</li>
 			<li onclick="window.location.href='./childpages/thesis.html'">论文页面</li>
-			<li onclick="window.location.href='./childpages/index.html'">主界面</li>
 	</ul>
 </body>
 </html>
