--- a/childpages/character.html
+++ b/childpages/character.html
@@ -4,7 +4,9 @@
 	<title>角色创建界面</title>
 </head>
 <body>
-	<h1>欢迎创建角色！</h1>
+    <li onclick="window.location.href='../index.html'">返回主界面</li>
+
+    <h1>输入学籍</h1>
 	<form onsubmit="createCharacter(event)">
 		<label for="name-input">姓名：</label>
 		<input type="text" id="name-input" required><br>
