--- a/childpages/stats.html
+++ b/childpages/stats.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>数值页面</title>
+    <title>数值页面</title>
 </head>
 <body>
-	<h1>欢迎来到数值页面</h1>
-	<table>
-		<tr>
-			<th>名称</th>
-			<th>数值</th>
-		</tr>
-		<tr>
-			<td>San值</td>
-			<td id="san-value">80</td>
-		</tr>
-		<tr>
-			<td>体力</td>
-			<td id="health-value">100</td>
-		</tr>
-		<tr>
-			<td>导师好感度</td>
-			<td id="favorability-value">70</td>
-		</tr>
-		<tr>
-			<td>论文完成度</td>
-			<td id="completion-value">50%</td>
-		</tr>
-		<tr>
-			<td>论文质量</td>
-			<td id="quality-value">B</td>
-		</tr>
-	</table>
+    <li onclick="window.location.href='./index.html'">返回主界面</li>
 
-	<button onclick="updateStats()">更新数值</button>
+    <h1>欢迎来到数值页面</h1>
+    <table>
+        <tr>
+            <th>名称</th>
+            <th>数值</th>
+        </tr>
+        <tr>
+            <td>San值</td>
+            <td id="san-value">80</td>
+        </tr>
+        <tr>
+            <td>体力</td>
+            <td id="health-value">100</td>
+        </tr>
+        <tr>
+            <td>导师好感度</td>
+            <td id="favorability-value">70</td>
+        </tr>
+        <tr>
+            <td>论文完成度</td>
+            <td id="completion-value">50%</td>
+        </tr>
+        <tr>
+            <td>论文质量</td>
+            <td id="quality-value">B</td>
+        </tr>
+    </table>
 
-	<script>
-		function updateStats() {
-			// 发送请求获取新的数值数据（模拟API接口）
-			var xhr = new XMLHttpRequest();
-			xhr.open('GET', 'http://example.com/api/stats', true);
-			xhr.onload = function() {
-				if (xhr.status === 200) {
-					var stats = JSON.parse(xhr.responseText);
-					document.getElementById('san-value').textContent = stats.san;
-					document.getElementById('health-value').textContent = stats.health;
-					document.getElementById('favorability-value').textContent = stats.favorability;
-					document.getElementById('completion-value').textContent = stats.completion;
-					document.getElementById('quality-value').textContent = stats.quality;
-				}
-			};
-			xhr.send();
-		}
-	</script>
+    <button onclick="updateStats()">更新数值</button>
+
+    <script>
+        function updateStats() {
+            // 发送请求获取新的数值数据（模拟API接口）
+            var xhr = new XMLHttpRequest();
+            xhr.open('GET', 'http://example.com/api/stats', true);
+            xhr.onload = function() {
+                if (xhr.status === 200) {
+                    var stats = JSON.parse(xhr.responseText);
+                    document.getElementById('san-value').textContent = stats.san;
+                    document.getElementById('health-value').textContent = stats.health;
+                    document.getElementById('favorability-value').textContent = stats.favorability;
+                    document.getElementById('completion-value').textContent = stats.completion;
+                    document.getElementById('quality-value').textContent = stats.quality;
+                }
+            };
+            xhr.send();
+        }
+        
+        // 将updateStats()函数放到全局作用域中，以便其他页面调用
+        window.updateStats = updateStats;
+    </script>
 </body>
 </html>
