--- a/childpages/stats.html
+++ b/childpages/stats.html
@@ -4,7 +4,7 @@
     <title>数值页面</title>
 </head>
 <body>
-    <li onclick="window.location.href='./index.html'">返回主界面</li>
+    <li onclick="window.location.href='../index.html'">返回主界面</li>
 
     <h1>欢迎来到数值页面</h1>
     <table>
