--- a/childpages/activity.html
+++ b/childpages/activity.html
@@ -4,7 +4,7 @@
 	<title>活动选择</title>
 </head>
 <body>
-    <li onclick="window.location.href='../index.html'">返回主界面</li>
+    <button onclick="window.location.href='../index.html'">返回主界面</button>
     <h1>请选择一项活动</h1>
 
 <ul>
