--- a/childpages/advisor.html
+++ b/childpages/advisor.html
@@ -4,7 +4,7 @@
 	<title>导师任务</title>
 </head>
 <body>
-    <li onclick="window.location.href='../index.html'">返回主界面</li>
+    <button onclick="window.location.href='../index.html'">返回主界面</button>
 
     <h1>文案待写</h1>
 	<h2>您当前的导师好感度为：<span id="favorability">80</span></h2>
