--- a/childpages/event.html
+++ b/childpages/event.html
@@ -4,7 +4,7 @@
 	<title>随机事件界面</title>
 </head>
 <body>
-    <li onclick="window.location.href='../index.html'">返回主界面</li>
+    <button onclick="window.location.href='../index.html'">返回主界面</button>
 
     <h1>随机事件界面</h1>
 	<p>导师突然找你谈话，让你去参加一场重要的学术会议！</p>
