--- a/childpages/experiment.html
+++ b/childpages/experiment.html
@@ -4,7 +4,7 @@
 	<title>实验游戏界面</title>
 </head>
 <body>
-    <li onclick="window.location.href='../index.html'">返回主界面</li>
+    <button onclick="window.location.href='../index.html'">返回主界面</button>
 
     <h1>实验游戏界面</h1>
 	<p>请完成以下实验题目：</p>
