--- a/childpages/character.html
+++ b/childpages/character.html
@@ -4,7 +4,7 @@
 	<title>角色创建界面</title>
 </head>
 <body>
-    <li onclick="window.location.href='../index.html'">返回主界面</li>
+    <button onclick="window.location.href='../index.html'">返回主界面</button>
     <link rel="stylesheet" type="text/css" href="css/character.css">
 	<script>
 		function displayCharacter(character) {
