--- a/childpages/activity.html
+++ b/childpages/activity.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>活动选择</title>
+	<title>开始新的一天</title>
 </head>
 <body>
     <button onclick="window.location.href='../index.html'">返回主界面</button>
